--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,6 +1,7 @@
 $dark-background: #0C1726;
 $dark-background-less-opaque: #0c1726f1;
 $dark-foreground: #465932;
+$dark-foreground-less-opaque: #465932f1;
 $dark-contrasty: #F2BF80;
 $dark-contrasty-2: #F2C6A0;
 $dark-contrasty-dark: #8C5535;
